--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.covid</groupId>
     <artifactId>vaccineman</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>vaccineman</name>
     <description>Demo project for Spring Boot</description>
     <properties>
