--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 server.servlet.context-path=/vaccineman
+
+cities.tiers.tier1.pin.prefix=110,560,700,711,600,500,400,380,382,411
