opt out user for selected pincode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=${DB_PASSWORD}
 server.servlet.context-path=/vaccineman
 
 cities.tiers.tier1.pin.prefix=110,560,700,711,600,500,400,380,382,411
+
+cities.tiers.tier2.pin.prefix=
