--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>org.covid</groupId>
     <artifactId>vaccineman</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <name>vaccineman</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Vaccineman Rest Api</description>
     <properties>
         <java.version>11</java.version>
     </properties>
