add tier 2 pins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ server.servlet.context-path=/vaccineman
 
 cities.tiers.tier1.pin.prefix=110,560,700,711,600,500,400,380,382,411
 
-cities.tiers.tier2.pin.prefix=
+cities.tiers.tier2.pin.prefix=202,474,475,282,201,462,122,834,201,305,250,284,440
