--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -25,3 +25,4 @@ jobs:
           port: ${{ secrets.DEPLOY_PORT }}
           source: "target/vaccineman*.jar"
           target: ${{ secrets.DEPLOY_DESTINATION }}
+          strip_components: 1
