--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,28 +16,13 @@ jobs:
           distribution: 'adopt'
       - name: Build
         run: mvn -Dmaven.test.skip=true clean install
-      - name: Package build
-        run: zip deploy.zip target/vaccineman*.jar
-
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
-        with:
-          pattern: '[:\.]+'
-          string: "${{ steps.current-time.outputs.time }}"
-          replace-with: '-'
-          flags: 'g'
-
       - name: Deploy
         uses: einaregilsson/beanstalk-deploy@v16
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: java-bot-rest-api
-          environment_name: prod
-          version_label: v-${{ steps.format-time.outputs.replaced }}
+          application_name: vaccineman-java-bot-rest-api
+          environment_name: production
+          version_label: ${{github.SHA}}
           region: ap-south-1
-          deployment_package: deploy.zip
+          deployment_package: target/vaccineman-*.jar
